getRoute endpoint
